--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
+        android:minSdkVersion="11"
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,7 +16,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Sherlock" >
         <meta-data
             android:name="AA_DB_NAME"
             android:value="RestClient.db" />
@@ -50,6 +50,10 @@
         <activity
             android:name="com.codepath.twitter.twitterapp.TwitterComposeActivity"
             android:label="@string/title_activity_twitter_compose" >
+        </activity>
+        <activity
+            android:name="com.codepath.twitter.twitterapp.ProfileViewActivity"
+            android:label="@string/title_activity_profile_view" >
         </activity>
     </application>
 
